[PPABV-83] feat: convert project to kotlin; add spotless plugin; add jacoco plugin